# tiktokin-contract

./: .gitignore  Anchor.toml
amm_cpi/src/: lib.rs
programs/pump/: Cargo.toml
programs/pump/src/: consts.rs  errors.rs  lib.rs
programs/pump/src/instructions/: initialize_amm.rs  launch.rs  migrate.rs  swap.rs
programs/pump/src/pda_accounts/: liquidity_pda.rs
programs/pump/src/states/: bonding_curve.rs
programs/tiktokin/: Cargo.toml
programs/tiktokin/src/: errors.rs  lib.rs
programs/tiktokin/src/instructions/: launch.rs  migrate.rs  swap.rs
programs/tiktokin/src/pda_accounts/: mod.rs
programs/tiktokin/src/states/: bonding_curve.rs
programs/tiktokin/src/utils/: transfer.rs
