[package]
name = "tiktokin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tiktokin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = []
default = ["devnet"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="0.31.0", features = ["init-if-needed"] }
anchor-spl = { version="0.31.0", features = ["metadata"] }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "no-entrypoint",
    "devnet",
    "cpi",
] }
